Deploy backend dev